refactor: Update README and backend documentation, enhance Bounty and Audit services
- Expanded the README to include detailed project structure and workflow recommendations.
- Updated backend documentation with new database patch instructions and environment variable configurations.
- Refactored BountyService to improve submission handling and added new methods for managing claims and submissions.
- Enhanced AuditService to support additional filtering options for audit logs.
- Introduced new endpoints in AdminBountyController and BountyController for better submission management and review processes.
- Added new error codes for improved error handling in the application.

Co-authored-by: Cursor <cursoragent@cursor.com>